fix: hide the vertical scrollbar of TablePro footer

--- a/apps/web/src/components/table-pro/components/footer/style.less
+++ b/apps/web/src/components/table-pro/components/footer/style.less
@@ -27,6 +27,10 @@
 
             .@{mui-prefix}TablePagination-select {
                 min-width: 30px;
+                min-height: auto;
+                padding-top: @padding-xxs;
+                padding-bottom: @padding-xxs;
+                line-height: (@ms-table-pro-footer-button-height - 2 * @padding-xxs);
                 text-align: left;
                 text-align-last: left;
             }
